--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+easy-rsa (2.2.2-1~aurex1) precise; urgency=low
+
+  * Rebuild for aurex 12.04 (precise)
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Thu, 13 Feb 2014 16:41:33 +0100
+
 easy-rsa (2.2.2-1) unstable; urgency=low
 
   * New upstream release. (Closes: #733905)
